<resources>
    <string name="app_name">YBAccouting</string>
    <string name="cta_done">Done</string>
    <string name="home_total_title">Current Available</string>
    <string name="transaction_title">New Transaction</string>
    <string name="transaction_name">Name</string>
    <string name="transaction_deposit">Deposit</string>
    <string name="transaction_withdraw">Withdraw</string>
    <string name="transaction_money">Amount</string>
</resources>
